--- a/netlify.toml
+++ b/netlify.toml
@@ -4,4 +4,4 @@
     Content-Security-Policy = "default-src: 'none'; script-src: 'self' https://www.google.com/recaptcha/ https://www.gstatic.com/recaptcha/; frame-src: https://www.google.com/recaptcha/"
     X-Frame-Options = "DENY"
     X-Content-Type-Options = "nosniff"
-    X-Xss-Protection = "1; mode=block;
+    X-Xss-Protection = "1; mode=block;"
