--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [[headers]]
     for  ="/*"
     [headers.values]
-    Content-Security-Policy = "script-src 'self' https://www.google.com/recaptcha/ https://www.gstatic.com/recaptcha/ https://www.googletagmanager.com/ https://www.google-analytics.com/ 'unsafe-inline'; frame-src https://www.google.com/recaptcha/"
+    Content-Security-Policy = "script-src 'self' https://www.google.com/ https://www.google.com/recaptcha/ https://www.gstatic.com/recaptcha/ https://www.googletagmanager.com/ https://www.google-analytics.com/ 'unsafe-inline'; frame-src https://www.google.com/recaptcha/"
     X-Frame-Options = "DENY"
     X-Content-Type-Options = "nosniff"
     X-Xss-Protection = "1; mode=block;"
     Referrer-Policy = "origin"
-    SiteCookie = "https://google.com; SameSite=None; Secure;"
+    SiteCookie = "https://www.google.com/; SameSite=None; Secure;"
